# air

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
docs/: Service Discovery.md  design-dark.html  design-light.html  design-mobile.html  design.html  technical-specification.md
openspec/: project.md
openspec/changes/add-cross-compilation/: proposal.md
openspec/changes/add-file-mod-time-display/: design.md  tasks.md
openspec/changes/add-quit-and-stats/: design.md  tasks.md
openspec/changes/add-s3-server-endpoint/: design.md  proposal.md  tasks.md
openspec/changes/add-s3-server-separate-port/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-05-add-auto-port-selection/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-05-add-cross-compilation/: design.md  tasks.md
openspec/changes/archive/2026-01-05-add-quit-and-stats/: proposal.md
openspec/changes/archive/2026-01-05-add-tui-qr-code/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-05-bundle-static-assets/: design.md  tasks.md
openspec/changes/archive/2026-01-05-fix-favicon/: design.md
openspec/changes/archive/2026-01-05-fix-lint-warnings/: proposal.md  tasks.md
openspec/changes/archive/2026-01-05-flatten-project-structure/: design.md
openspec/changes/archive/2026-01-05-implement-core-rust/: design.md  tasks.md
openspec/changes/archive/2026-01-05-implement-tui-dashboard/: design.md
openspec/changes/archive/2026-01-05-optimize-batch-h2-https/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-05-refactor-address-display/: design.md  proposal.md  tasks.md
openspec/changes/bundle-static-assets/: proposal.md
openspec/changes/enhance-ui-breadcrumbs/: design.md  proposal.md  tasks.md
openspec/changes/fix-favicon/: proposal.md  tasks.md
openspec/changes/fix-favicon/specs/server/: spec.md
openspec/changes/fix-path-resolution-and-error-mapping/: design.md  proposal.md
openspec/changes/flatten-project-structure/: proposal.md  tasks.md
openspec/changes/implement-core-rust/: proposal.md
openspec/changes/implement-cyber-ui/: proposal.md
openspec/changes/implement-mmap-file-cache/: proposal.md
openspec/changes/implement-tui-dashboard/: proposal.md  tasks.md
openspec/changes/refactor-port-selection-strategy/: design.md  tasks.md
openspec/specs/cli/: spec.md
openspec/specs/codebase/: spec.md
openspec/specs/security/: spec.md
openspec/specs/server/: spec.md
openspec/specs/structure/: spec.md
openspec/specs/ui/: spec.md
src/: cert.rs  dashboard.rs  discovery.rs  fs_utils.rs  handlers.rs  logger.rs  main.rs  server.rs  view.rs
(+86 files in other folders)
