[package]
name = "air"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["http2", "macros"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
local-ip-address = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
chrono = "0.4"
percent-encoding = "2.3"
bytes = "1"
futures = "0.3"
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio-stream = "0.1.18"

[dev-dependencies]
tempfile = "3.24.0"
